--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,16 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
+    }
+}
+
 apply plugin: 'com.android.application'
+apply plugin: 'com.jakewharton.hugo'
+
 
 android {
     compileSdkVersion 25
@@ -29,14 +41,21 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
 
-    compile 'com.jakewharton:butterknife:8.4.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'org.osmdroid:osmdroid-android:5.6.5'
+    compile 'com.github.MKergall:osmbonuspack:6.4'
 
     /**
      * Memory leak library
      */
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+
+
+//    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+
+    compile project(path: ':overpasslib')
+//    compile 'carcme:overpasslib:0.0.1'   // USE THIS TO TEST OVERPASS LIB
 
 }
