--- a/overpasslib/build.gradle
+++ b/overpasslib/build.gradle
@@ -1,4 +1,31 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.jfrog.bintray'
+
+ext {
+    bintrayRepo = 'overpass'
+    bintrayName = 'overpasslib'
+
+    publishedGroupId = 'carcme'
+    libraryName = 'overpass'
+    artifact = 'overpasslib'
+
+    libraryDescription = 'UI Library for login buttons'
+
+    siteUrl = 'https://github.com/carcme/Overpass'
+    gitUrl = 'https://github.com/carcme/Overpass.git'
+
+    libraryVersion = '0.0.1'
+
+    developerId = 'carcme'
+    developerName = 'Carc Me'
+    developerEmail = 'carcmedev@gmail.com'
+
+    licenseName = 'MIT'
+    licenseUrl = 'https://opensource.org/licenses/MIT'
+    allLicenses = ["MIT"]
+}
+
 
 android {
     compileSdkVersion 25
@@ -30,3 +57,6 @@ dependencies {
     testCompile "org.robolectric:robolectric:3.0"
     testCompile 'org.hamcrest:hamcrest-library:1.1'
 }
+// Place it at the end of the file
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
